refazendo ex 8